# pytest-api-test-framework

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: framework-tests.yml
docs/: architecture.md
src/framework/: __init__.py
src/framework/core/: __init__.py  client.py  config.py
src/framework/utils/: __init__.py  api_context.py  data_loader.py  performance.py  schema_validator.py  security.py
test_application/: conftest.py
test_application/dummyjson/: conftest.py  helpers.py
test_application/dummyjson/schemas/: auth_login.schema.json  cart_collection.schema.json  comment_collection.schema.json  post_collection.schema.json  product.schema.json  product_collection.schema.json  user.schema.json  user_collection.schema.json
test_application/dummyjson/services/: __init__.py
test_application/dummyjson/test_data/: auth_user.json  invalid_login.json  user_search.json
test_application/dummyjson/tests/: __init__.py  test_auth.py  test_carts.py  test_posts_comments.py  test_products.py  test_users.py
tests/framework/core/: test_client.py  test_config.py
tests/framework/test_data/: sample.json  valid_schema.json
tests/framework/utils/: test_api_context.py  test_data_loader.py  test_performance.py  test_schema_validator.py  test_security.py
