[project]
name = "pytest-api-test-framework"
version = "0.1.0"
description = "Reusable Pytest API testing framework with API test application suites"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests", "test_application"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
log_cli = true
log_cli_level = "INFO"
log_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(name)s - %(message)s"
log_date_format = "%H:%M:%S"
markers = [
    "framework_unit_test: unit tests for reusable framework code only",
    "dummyjson: tests that target the DummyJSON API",
    "dummyjson_smoke: minimal happy-path tests for the DummyJSON API",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "PT"]
